[package]
name = "hybrid_phi"
version = "0.1.0"
edition = "2021"
authors = ["Idan Kaminer info@paxintrade.com>"]
description = "High-accuracy φ-based hybrid approximation method"
license = "MIT"
repository = "https://github.com/youruser/hybrid_phi"
keywords = ["approximation", "compression", "numerical", "embedded", "float"]
categories = ["algorithms", "mathematics", "embedded"]
readme = "README.md"

[dependencies]
