[package]
name = "hybrid_phi"
version = "0.1.2"
edition = "2021"
authors = ["Idan Kaminer info@paxintrade.com>"]
description = "High-accuracy φ-based hybrid approximation method"
license = "MIT"
repository = "https://github.com/andysay1/hybrid_phi"
keywords = ["approximation", "compression", "numerical", "embedded", "float"]
categories = ["algorithms", "mathematics", "embedded"]
readme = "README.md"

exclude = [
    "/target/*",
    "**/*.rs.bk",
    "**/*.log",
    "**/*.tmp",
    "**/.DS_Store",
    "/.idea/*",
    "/.vscode/*",
    "*.zip",
    "*.png",
    "*.jpg"
]

[dependencies]
rand = "0.8"
